<resources>
    <string name="app_name">QuizApp</string>
    <string name="editText">Type your name.</string>
    <string name="firstCheckBox">I attend to university or school about computer engineering</string>
    <string name="secondCheckBox">I attend to university or school about other mechanical field</string>
    <string name="thirdCheckBox">I have attended only courses</string>
    <string name="fourthCheckBox">I work in computer industry</string>
    <string name="fifthCheckBox">I have just started being more than a simple user</string>
    <string name="cplusplus">C++</string>
    <string name="java">Java</string>
    <string name="csharp">C#</string>
    <string name="c">C</string>
    <string name="javascript">JavaScript</string>
    <string name="ruby">Ruby</string>
    <string name="python">Python</string>
    <string name="html_css">HTML and Css</string>
    <string name="matlab">Matlab</string>
    <string name="school">State the conditions that fit you:</string>
    <string name="prog_lang">Which of the following programming languages do you know how to use?</string>
    <string name="mobile_prog">On which of the following mobile operation systems are you able to make apps?</string>
    <string name="android">Android OS(Google Inc.)</string>
    <string name="samsung">Bada (Samsung)</string>
    <string name="apple">iPhone Os(Apple)</string>
    <string name="windows">Windows Mobile(Windows)</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="search">How much are you searching for new technics and ways to improve your coding skills and expand your knowledge?</string>
    <string name="first">I scroll through the internet for new complilers,languages,attributes and specific elements of programming languages all the time</string>
    <string name="second">Only if I need something that I do not know during the time I work on a project</string>
    <string name="third">Not at all</string>
    <string name="fourth">I already know the best technics</string>
    <string name="tips">Would you consider thinking about a programming tip from a collague or classmate?</string>
    <string name="first_tip">Sure, I will try to understand it and use it in my code</string>
    <string name="second_tip">I have heard a lot of tips but I do not really think they are good</string>
    <string name="third_tip">I do not think that giving/receiving tips is helpful for anyone</string>
    <string name="fourth_tip">They can not possibly know more than me</string>
    <string name="rule">Do you follow the rules(Commenting,Camel Case naming,etc) during the coding of your projects?</string>
    <string name="first_rule">I always follow those rules so my code can be easily read by me or other programmers(This technic makes easier debugging and maintenance of my code)</string>
    <string name="second_rule">I sometimes use camel case so I can read my code but I never comment because I know my program by heart</string>
    <string name="third_rule">I do not think it is important to follow those rules</string>
    <string name="fourth_rule">Why would I waste my time like that?</string>
    <string name="fail">How do you face a failure on a project due to past deadline,wrong coding or unable to cooparate with classmates/collagues?</string>
    <string name="first_fail">I always try to find the mistakes I made and what knowledge I was missing. I try to talk to the people invlolved to figure out what exactly went wrong</string>
    <string name="second_fail">I try to figure out what I did wrong but it is mostly others fault</string>
    <string name="third_fail">I tried my best but since I failed I do not care anymore</string>
    <string name="fourth_fail">How can I be wrong? Either the assignment was wrong to begin with or the people I worked with messed up</string>
    <string name="opinion">What do you think about yourself as a programmer?</string>
    <string name="first_opinion">I have potential and I am sure I have plenty more to learn and much more knowledge to acquire</string>
    <string name="second_opinion">I am pretty good, sure plenty of space to get better</string>
    <string name="third_opinion">I am lost in programming I do not think I can make it</string>
    <string name="fourth_opinion">I am a perfect programmer and I do not really think that anyone else can be better than me</string>
    <string name="sumbit">SUMBIT ANSWERS</string>
</resources>
